--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "eslint-plugin-no-console-log": "^1.0.0"
   },
   "engines": {
-    "node": "^5.0.0"
+    "node": "~14.19.0"
   },
   "engineStrict": true,
   "files": [
